--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -6,7 +6,7 @@ on:
       device:
         description: '➡️ 选择需构建固件的设备型号'
         required: true
-        default: 'netcore-n60-pro'
+        default: 'jdcloud-re-cp-03'
         type: choice
         options:
           - 'cetron-ct3003'
@@ -26,12 +26,12 @@ on:
       lan_addr:
         description: '🌐 设置默认 LAN IP 地址'
         required: true
-        default: '10.0.0.1'
+        default: '192.168.68.1'
         type: string
       wifi_name:
-        description: '🛜 设置默认 WIFI 名称（可选，默认ZeroWrt）'
+        description: '🛜 设置默认 WIFI 名称（可选，默认JDCwifi）'
         required: false
-        default: 'ZeroWrt'
+        default: 'JDCwifi'
         type: string        
       root_password:
         description: '🔐 设置默认 root 密码（可选，默认password）'
