Update WiFi name description in build-release.yml

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,7 +19,7 @@ on:
         default: '192.168.68.1'
         type: string
       wifi_name:
-        description: '🛜 设置默认 WIFI 名称（可选，默认ZeroWrt）'
+        description: '🛜 设置默认 WIFI 名称'
         required: false
         default: 'JDCwifi'
         type: string
