--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,9 +10,7 @@ on:
         type: choice
         options:
           - 'jdcloud-re-cp-03'
-          - 'all-mt7981-devices'
           - 'all-mt7986-devices'
-          - 'all-high-power-devices'
       lan_addr:
         description: '🌐 设置默认 LAN IP 地址'
         required: true
@@ -77,7 +75,7 @@ jobs:
 
     - name: Install Caddy Server
       run: |
-        sudo curl -sL -o /usr/bin/caddy https://github.com/OPPEN321/caddy/releases/download/v2.10.2/caddy-amd64
+        sudo curl -sL -o /usr/bin/caddy https://github.com/caddyserver/caddy/releases/tag/v2.10.2
         sudo chmod 755 /usr/bin/caddy
         echo ":8080 {" > caddyfile
         echo "    root * $(pwd)/immortalwrt-mt798x-action" >> caddyfile
@@ -120,11 +118,7 @@ jobs:
       run: |
         mkdir -p rom
         case "${{ github.event.inputs.device }}" in
-          cetron-ct3003|cmcc-a10|cmcc-rax3000m-emmc|cmcc-rax3000m-nand|cmcc-rax3000me-nand|\
-          h3c-magic-nx30-pro|imou-lc-hx3001|nokia-ea0326gmp|philips-hy3000|qihoo-360t7|\
-          newland-nl-wr8103|umi-uax3000e|xiaomi-mi-router-ax3000t|clx-s20p|netcore-n60-pro|\
-          netcore-n60-pro-512rom|xiaomi-redmi-router-ax6000|xiaomi-redmi-router-ax6000-512rom|\
-          jdcloud-re-cp-03|all-mt7981-devices|all-mt7986-devices|all-high-power-devices)
+          jdcloud-re-cp-03|all-mt7986-devices)
               cp -a openwrt/bin/targets/mediatek/*/*-sysupgrade.bin rom/
               ;;
         esac
